# k8s_simulation_quick_v2

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  pyproject.toml
crates/kubesim-bench/: Cargo.toml
crates/kubesim-bench/src/: main.rs
crates/kubesim-core/: Cargo.toml
crates/kubesim-ec2/: Cargo.toml
crates/kubesim-engine/: Cargo.toml
crates/kubesim-engine/src/: daemonset.rs  deletion_cost.rs  lib.rs  replicaset.rs
crates/kubesim-engine/tests/: e2e_simulation.rs  integration_e2e.rs
crates/kubesim-karpenter/: Cargo.toml
crates/kubesim-karpenter/src/: conformance.rs  conformance_consolidation.rs  conformance_kwok.rs  conformance_provisioning.rs  conformance_replicaset.rs  conformance_scheduler.rs  conformance_version.rs  consolidation.rs  drift.rs  handler.rs  lib.rs  nodepool.rs  provisioner.rs  spot.rs  version.rs
crates/kubesim-metrics/: Cargo.toml
crates/kubesim-py/: Cargo.toml
crates/kubesim-py/src/: lib.rs
crates/kubesim-scheduler/: Cargo.toml
crates/kubesim-workload/: Cargo.toml
crates/kubesim-workload/src/: events.rs  lib.rs  loader.rs  random.rs  scenario.rs  trace.rs
data_documents/: eks_analytics_schema.md
docs/: accuracy-audit.md  adversarial-consolidate-when-proposal.md  adversarial-scoring-proposal.md  adversarial-search-audit.md  consolidate-when-experiment-plan.md  consolidate-when-tradeoff-analysis.md  consolidate-when-verification-report.md  inplace-resize-consolidation-analysis.md  karpenter-version-comparison.md  kwok-eviction-investigation.md  kwok-verification-plan.md  sim-kwok-gap-analysis.md  test-coverage-report.md  validation-pipeline-plan.md
kwok-verify/manifests/: deployment-a.yaml  deployment-b.yaml  scale-sequence-fast.sh  scale-sequence.sh
kwok-verify/templates/: balanced-k1.yaml  balanced-k2-fixed.yaml  balanced-k2.yaml  balanced-k4.yaml  balanced-when-underutilized.yaml  cost-justified-0.25.yaml  cost-justified-0.50.yaml  cost-justified-0.75.yaml  cost-justified-1.00.yaml  cost-justified-1.50.yaml  cost-justified-2.00.yaml  cost-justified-3.00.yaml  cost-justified-5.00.yaml  when-empty-hetero.yaml  when-empty.yaml  when-underutilized-hetero.yaml
python/kubesim/: __init__.py  __main__.py  adversarial.py  analysis.py  objectives.py  plots.py  report.py  run_adversarial.py  scale_invariant_scoring.py  (+3 more)
results/: adversarial-deletion-cost-summary.md  adversarial-karpenter-version-summary.md  adversarial-scheduling-summary.md  disruption-budget-audit.md  perf-diagnosis.txt  scale-perf-benchmark.txt  test-run.txt
scenarios/: adversarial-churn-kwok.yaml  adversarial-deletion-cost-kwok.yaml  adversarial-heterogeneous-kwok.yaml  balanced-threshold-verify.yaml  batch-job-lifecycle.yaml  benchmark-control-kwok.yaml  benchmark-control.yaml  deletion-cost-drain.yaml  deletion-cost-heterogeneous.yaml  deletion-cost-large-heterogeneous.yaml  deletion-cost-ranking.yaml  disruption-budget-schedule.yaml  disruption-budget-stress.yaml  grafana-import-01.yaml  karpenter-version-comparison.yaml  multi-nodepool.yaml  placement-antiaffinity-kwok.yaml  placement-cross-antiaffinity-kwok.yaml  placement-multipool-kwok.yaml  placement-spread-kwok.yaml  pod-deletion-cost-verify.yaml  scheduling-comparison.yaml  validation-baseline.yaml
scripts/: compare-kwok-vs-simulator.py  convert_scenario.py  find_adversarial.py  find_adversarial_consolidate_when.py  find_adversarial_deletion_cost.py  find_adversarial_karpenter_version.py  generate-fullscale-report.sh  generate-pod-deletion-cost-report.sh  kind-karpenter-setup.sh  plot_consolidate_tradeoff.py  run-kwok-4variant-verify.sh  run-kwok-balanced-fixed-verify.sh  run-kwok-balanced-threshold-verify.sh  run-kwok-consolidate-verify.sh  run-kwok-fast-matrix.sh  run-kwok-full-verify.sh  run-kwok-fullscale-verify.sh  run-kwok-pod-deletion-cost-verify.sh  run_balanced_threshold_sim.py  run_consolidate_tradeoff.py  run_inplace_resize_analysis.py  run_pod_deletion_cost_sim.py  verify_grafana_import.py
tests/: test_converter.py
validation/: .gitignore  README.md  collect-metrics.sh  compare-results.py  instance-types.json  perf-scaling.py  run-scenario.sh  setup-cluster.sh  smoke-test.yaml  teardown-cluster.sh
(+654 files in other folders)
