[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kubesim"
version = "0.1.0"
description = "Fast Kubernetes cluster simulator — PyO3 bindings"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
 "optuna>=3.0",
 "hypothesis>=6.141.1",
]

[project.scripts]
kubesim = "kubesim.__main__:main"

[tool.maturin]
manifest-path = "crates/kubesim-py/Cargo.toml"
module-name = "kubesim._native"
python-source = "python"
features = ["pyo3/extension-module"]
