[package]
name = "kubesim-engine"
version.workspace = true
edition.workspace = true

[dependencies]
kubesim-core = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
kubesim-scheduler = { workspace = true }
kubesim-karpenter = { workspace = true }
kubesim-ec2 = { workspace = true }
kubesim-metrics = { workspace = true }
smallvec = { workspace = true }
