[package]
name = "kubesim-karpenter"
version.workspace = true
edition.workspace = true

[dependencies]
kubesim-core = { workspace = true }
kubesim-ec2 = { workspace = true }
kubesim-engine = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
smallvec = { workspace = true }
