[package]
name = "kubesim-karpenter"
version.workspace = true
edition.workspace = true

[dependencies]
kubesim-core = { workspace = true }
kubesim-ec2 = { workspace = true }
kubesim-engine = { workspace = true }
kubesim-scheduler = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
