[package]
name = "kubesim-py"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
kubesim-core = { workspace = true }
kubesim-engine = { workspace = true }
kubesim-scheduler = { workspace = true }
kubesim-workload = { workspace = true }
kubesim-metrics = { workspace = true }
kubesim-ec2 = { workspace = true }
pyo3 = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
