[package]
name = "kubesim-workload"
version.workspace = true
edition.workspace = true

[dependencies]
kubesim-core = { workspace = true }
kubesim-ec2 = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
